added the first set of pictures

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <section>
       <img src="./images/blue jay.jpeg" alt="Blue jay" />
+      <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
+      <img src="./images/dove.jpeg" alt="Dove" />
     </section>
 
     <section></section>
