added a second set of photos

--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
       </nav>
     </header>
 
-    <section>
+    <section class="Set 1">
       <img src="./images/blue jay.jpeg" alt="Blue jay" />
       <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
       <img src="./images/dove.jpeg" alt="Dove" />
     </section>
 
-    <section></section>
+    <section class="Set 2">
+      <img src="./images/falcon.jpeg" alt="Falcon" />
+      <img src="./images/hen.jpeg" alt="Hen" />
+      <img src="./images/hummingbirds.jpeg" alt="hummingbirds" />
+    </section>
 
     <section></section>
   </body>
