added the third set of photos

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       <img src="./images/hummingbirds.jpeg" alt="hummingbirds" />
     </section>
 
-    <section></section>
+    <section class="set 3">
+      <img src="./images/owl.jpeg" alt="Owl" />
+      <img src="./images/parrot.jpeg" alt="parrot" />
+      <img src="./images/penguins.jpeg" alt="penguins" />
+    </section>
   </body>
 </html>
