--- a/index.html
+++ b/index.html
@@ -19,22 +19,28 @@
       </nav>
     </header>
 
-    <section class="Set 1">
-      <img src="./images/blue jay.jpeg" alt="Blue jay" />
-      <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
-      <img src="./images/dove.jpeg" alt="Dove" />
+    <section class="set1">
+      <div>
+        <img src="./images/blue jay.jpeg" alt="Blue jay" />
+        <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
+        <img src="./images/dove.jpeg" alt="Dove" />
+      </div>
     </section>
 
-    <section class="Set 2">
-      <img src="./images/falcon.jpeg" alt="Falcon" />
-      <img src="./images/hen.jpeg" alt="Hen" />
-      <img src="./images/hummingbirds.jpeg" alt="hummingbirds" />
+    <section class="set2">
+      <div>
+        <img src="./images/falcon.jpeg" alt="Falcon" />
+        <img src="./images/hen.jpeg" alt="Hen" />
+        <img src="./images/hummingbirds.jpeg" alt="hummingbirds" />
+      </div>
     </section>
 
-    <section class="set 3">
-      <img src="./images/owl.jpeg" alt="Owl" />
-      <img src="./images/parrot.jpeg" alt="parrot" />
-      <img src="./images/penguins.jpeg" alt="penguins" />
+    <section class="set3">
+      <div>
+        <img src="./images/owl.jpeg" alt="Owl" />
+        <img src="./images/parrot.jpeg" alt="parrot" />
+        <img src="./images/penguins.jpeg" alt="penguins" />
+      </div>
     </section>
   </body>
 </html>
