--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
       </nav>
     </header>
 
-    <section class="set1">
-      <div>
+    <section class="photo-set">
+      <div class="photo-row">
         <img src="./images/blue jay.jpeg" alt="Blue jay" />
         <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
         <img src="./images/dove.jpeg" alt="Dove" />
       </div>
     </section>
 
-    <section class="set2">
-      <div>
+    <section class="photo-set">
+      <div class="photo-row">
         <img src="./images/falcon.jpeg" alt="Falcon" />
         <img src="./images/hen.jpeg" alt="Hen" />
         <img src="./images/hummingbirds.jpeg" alt="hummingbirds" />
       </div>
     </section>
 
-    <section class="set3">
-      <div>
+    <section class="photo-set">
+      <div class="photo-row">
         <img src="./images/owl.jpeg" alt="Owl" />
         <img src="./images/parrot.jpeg" alt="parrot" />
         <img src="./images/penguins.jpeg" alt="penguins" />
