added the footer

--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
         <img src="./images/penguins.jpeg" alt="penguins" />
       </div>
     </section>
+    <footer>
+      <p>Copyright 2024</p>
+    </footer>
   </body>
 </html>
