added a heading to my blog

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </ul>
       </nav>
     </header>
+    <h3>A Blog for my Favorite Birds</h3>
 
     <section class="photo-set">
       <div class="photo-row">
