added a logo in the header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <img src="./images/bird logo.jfif" />
       <nav>
         <ul class="nav-list">
           <li><a href="#">Home</a></li>
