changed the heading position

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
-      <img src="./images/bird logo.jfif" />
+      <h1 id="heading">A Blog for my Favorite Birds</h1>
+
+      <img id="logo" src="./images/bird logo.jfif" />
+
       <nav>
         <ul class="nav-list">
           <li><a href="#">Home</a></li>
@@ -19,7 +22,6 @@
         </ul>
       </nav>
     </header>
-    <h3>A Blog for my Favorite Birds</h3>
 
     <section class="photo-set">
       <div class="photo-row">
