--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         </ul>
       </nav>
     </header>
+    <section>
+      <img id="profile" src="./images/biography.jpeg" />
+      <p>
+        My name is Denis Mwangi. My favourite hobby is photography while my
+        favourite animals are birds. The collection below represent my most
+        favourite birds
+      </p>
+    </section>
 
     <section class="photo-set">
       <div class="photo-row">
