adjusted the logo size

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Bird Blog</title>
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <!-- Header Section -->
     <header>
-      <h1 id="heading">A Blog for my Favorite Birds</h1>
-
-      <img id="logo" src="./images/bird logo.jfif" />
-
+      <h1 id="heading">A Blog for My Favorite Birds</h1>
+      <img id="logo" src="./images/bird logo.jfif" alt="Bird Logo" />
       <nav>
         <ul class="nav-list">
           <li><a href="#">Home</a></li>
@@ -22,18 +21,21 @@
         </ul>
       </nav>
     </header>
-    <section>
-      <img id="profile" src="./images/biography.jpeg" />
+
+    <!-- Profile Section -->
+    <section id="profile-section">
+      <img id="profile" src="./images/biography.jpeg" alt="Biography Image" />
       <p>
-        My name is Denis Mwangi. My favourite hobby is photography while my
-        favourite animals are birds. The collection below represent my most
-        favourite birds
+        My name is Denis Mwangi. My favorite hobby is photography, and my
+        favorite animals are birds. The collection below represents my most
+        favorite birds.
       </p>
     </section>
 
+    <!-- Photo Gallery -->
     <section class="photo-set">
       <div class="photo-row">
-        <img src="./images/blue jay.jpeg" alt="Blue jay" />
+        <img src="./images/blue jay.jpeg" alt="Blue Jay" />
         <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
         <img src="./images/dove.jpeg" alt="Dove" />
       </div>
@@ -43,20 +45,21 @@
       <div class="photo-row">
         <img src="./images/falcon.jpeg" alt="Falcon" />
         <img src="./images/hen.jpeg" alt="Hen" />
-        <img src="./images/hummingbirds.jpeg" alt="hummingbirds" />
+        <img src="./images/hummingbirds.jpeg" alt="Hummingbirds" />
       </div>
     </section>
 
     <section class="photo-set">
       <div class="photo-row">
         <img src="./images/owl.jpeg" alt="Owl" />
-        <br />
-        <img src="./images/parrot.jpeg" alt="parrot" />
-        <img src="./images/penguins.jpeg" alt="penguins" />
+        <img src="./images/parrot.jpeg" alt="Parrot" />
+        <img src="./images/penguins.jpeg" alt="Penguins" />
       </div>
     </section>
+
+    <!-- Footer Section -->
     <footer>
-      <p>Copyright 2024</p>
+      <p>&copy; 2024 Bird Blog. All rights reserved.</p>
     </footer>
   </body>
 </html>
