adjusted the images dimension

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Section -->
     <header>
       <h1 id="heading">A Blog for My Favorite Birds</h1>
-      <img id="logo" src="./images/bird logo.jfif" alt="Bird Logo" />
+      <img id="logo" src="./images/bird logo.jfif" />
       <nav>
         <ul class="nav-list">
           <li><a href="#">Home</a></li>
