--- a/index.html
+++ b/index.html
@@ -35,25 +35,52 @@
     <!-- Photo Gallery -->
     <section class="photo-set">
       <div class="photo-row">
-        <img src="./images/blue jay.jpeg" alt="Blue Jay" />
-        <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
-        <img src="./images/dove.jpeg" alt="Dove" />
+        <figure>
+          <img src="./images/blue jay.jpeg" alt="Blue Jay" />
+          <figcaption>Blue Jay</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/budgerigar.jpeg" alt="Budgerigar" />
+          <figcaption>Budgerigar</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/dove.jpeg" alt="Dove" />
+          <figcaption>Dove</figcaption>
+        </figure>
       </div>
     </section>
 
     <section class="photo-set">
       <div class="photo-row">
-        <img src="./images/falcon.jpeg" alt="Falcon" />
-        <img src="./images/hen.jpeg" alt="Hen" />
-        <img src="./images/hummingbirds.jpeg" alt="Hummingbirds" />
+        <figure>
+          <img src="./images/falcon.jpeg" alt="Falcon" />
+          <figcaption>Falcon</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/hen.jpeg" alt="Hen" />
+          <figcaption>Hen</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/hummingbirds.jpeg" alt="Hummingbirds" />
+          <figcaption>Hummingbirds</figcaption>
+        </figure>
       </div>
     </section>
 
     <section class="photo-set">
       <div class="photo-row">
-        <img src="./images/owl.jpeg" alt="Owl" />
-        <img src="./images/parrot.jpeg" alt="Parrot" />
-        <img src="./images/penguins.jpeg" alt="Penguins" />
+        <figure>
+          <img src="./images/owl.jpeg" alt="Owl" />
+          <figcaption>Owl</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/parrot.jpeg" alt="Parrot" />
+          <figcaption>Parrot</figcaption>
+        </figure>
+        <figure>
+          <img src="./images/penguins.jpeg" alt="Penguins" />
+          <figcaption>Penguins</figcaption>
+        </figure>
       </div>
     </section>
 
